--- a/MainApp/package.json
+++ b/MainApp/package.json
@@ -22,8 +22,7 @@
     "rc": "~0.5.0",
     "sails": "~0.11.3",
     "sails-disk": "~0.10.0",
-    "sails-mysql": "~0.11.2",
-    "sha.js": "~2.4.4"
+    "sails-mysql": "~0.11.2"
   },
   "scripts": {
     "debug": "node debug app.js",
