--- a/MainApp/package.json
+++ b/MainApp/package.json
@@ -14,11 +14,13 @@
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-jst": "~0.6.0",
     "grunt-contrib-less": "0.11.1",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "material-design-lite": "^1.0.6",
     "rc": "~0.5.0",
     "sails": "~0.11.3",
     "sails-disk": "~0.10.0",
