--- a/MainApp/package.json
+++ b/MainApp/package.json
@@ -21,6 +21,8 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "material-design-lite": "^1.0.6",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "rc": "~0.5.0",
     "sails": "~0.11.3",
     "sails-disk": "~0.10.0",
