--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "material-design-lite": "^1.0.6",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "passport-facebook": "^2.0.0",
+    "passport-twitter": "^1.0.3",
+    "passport-google-auth": "^0.2.0",
     "rc": "~0.5.0",
     "sails": "~0.11.3",
     "sails-disk": "~0.10.0",
