--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "passport-local": "^1.0.0",
     "passport-facebook": "^2.0.0",
     "passport-twitter": "^1.0.3",
-    "passport-google-auth": "^0.2.0",
+    "passport-google-oauth": "^0.2.0",
     "rc": "~0.5.0",
     "sails": "~0.11.3",
     "sails-disk": "~0.10.0",
