--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
-    "material-design-lite": "^1.0.6",
+    "materialize-css": "~0.97.5",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-facebook": "^2.0.0",
