On repart sur de bonnes bases :^)

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "ejs": "~0.8.4",
+    "flexboxgrid": "^6.3.0",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
@@ -22,10 +23,10 @@
     "include-all": "~0.1.3",
     "material-design-lite": "^1.0.6",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
     "passport-facebook": "^2.0.0",
-    "passport-twitter": "^1.0.3",
     "passport-google-oauth": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.3",
     "rc": "~0.5.0",
     "sails": "~0.11.3",
     "sails-disk": "~0.10.0",
