--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "joi": "^7.2.3",
     "material-design-lite": "^1.0.6",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
@@ -30,6 +31,7 @@
     "rc": "~0.5.0",
     "sails": "~0.11.3",
     "sails-disk": "~0.10.0",
+    "sails-hook-autoreload": "^0.13.0",
     "sails-mysql": "~0.11.2"
   },
   "scripts": {
