--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
-    "joi": "^7.2.3",
     "material-design-lite": "^1.0.6",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
@@ -32,7 +31,8 @@
     "sails": "~0.11.3",
     "sails-disk": "~0.10.0",
     "sails-hook-autoreload": "^0.13.0",
-    "sails-mysql": "~0.11.2"
+    "sails-mysql": "~0.11.2",
+    "validatorjs": "^2.0.2"
   },
   "scripts": {
     "debug": "node debug app.js",
