--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "~0.8.4",
+    "express-messages": "^1.0.0",
     "flexboxgrid": "^6.3.0",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
