--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/.sass-cache
 ################################################
 ###############  .gitignore   ##################
 ################################################
@@ -82,7 +81,7 @@ bower_components
 ################################################
 .tmp
 dump.rdb
-
+.sass-cache/
 
 
 
@@ -123,30 +122,6 @@ nbproject
 
 ## Directory-based project format:
 .idea/
-# if you remove the above rule, at least ignore the following:
-
-# User-specific stuff:
-# .idea/workspace.xml
-# .idea/tasks.xml
-# .idea/dictionaries
-
-# Sensitive or high-churn files:
-# .idea/dataSources.ids
-# .idea/dataSources.xml
-# .idea/sqlDataSources.xml
-# .idea/dynamic.xml
-# .idea/uiDesigner.xml
-
-# Gradle:
-# .idea/gradle.xml
-# .idea/libraries
-
-# Mongo Explorer plugin:
-# .idea/mongoSettings.xml
-
-## File-based project format:
-*.ipr
-*.iws
 
 ## Plugin-specific files:
 
@@ -166,5 +141,4 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
-.idea
 .node_history
