--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "MainApp",
+  "name": "MindMap_Collaboratif",
   "private": true,
-  "version": "0.0.0",
-  "description": "a Sails application",
+  "version": "0.0.1",
+  "description": "Une Application web Sails, pour l'édition collaborative de mindmap avec permissions avancées.",
   "keywords": [],
   "dependencies": {
     "connect-flash": "^0.1.1",
@@ -23,7 +23,7 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
-    "material-design-lite": "^1.0.6",
+    "materialize-css": "^0.97.5",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
     "passport-google-oauth": "^0.2.0",
@@ -43,8 +43,8 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/root/MainApp.git"
+    "url": "git://github.com/Embraser01/IUT-PTUT.git"
   },
-  "author": "root",
+  "author": "Hugo ALLIAUME | Benjamin CHAZELLE | Marc-Antoine FERNANDES",
   "license": ""
 }
